# t4

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: publish-crates.yml  release-pr.yml  rust-ci.yml
benches/: io_worker_throughput.rs
doc/: concurrent_plan.md  design.md
examples/: basic_put_get.rs  range_read.rs  remount_persistence.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: model_equivalence.rs
proof-core/: Cargo.toml
proof-core/src/: input_kv.rs  lib.rs  wal.rs
src/: buffer.rs  engine.rs  error.rs  format.rs  future.rs  io.rs  io_task.rs  io_worker.rs  lib.rs  main.rs  store.rs  sync.rs  thread.rs  types.rs  uring.rs  uring_task.rs  uring_worker.rs  wal.rs
src/art/: art.rs  dense.rs  dll.rs  dll_xor.rs  index.rs  meta.rs  mod.rs  n16.rs  n256.rs  n4.rs  n48.rs  ptr.rs  version_lock.rs
src/io/: common.rs  generic.rs  io_uring.rs  io_worker.rs  mod.rs  sync.rs
tests/: store.rs
verified/: Cargo.toml  README.md
verified/src/: input_kv.rs  le_bytes.rs  lib.rs  wal.rs  wal_replay.rs
