[package]
name = "t4"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "fuzz", "proof-core"]

[features]
default = []
shuttle = ["dep:shuttle"]

[dependencies]
libc = "0.2"
io-uring = "0.7"
shuttle = { version = "0.8", optional = true }
proof-core = { path = "proof-core" }

[dev-dependencies]
pollster = "0.4"
tempfile = "3"
