[package]
name = "t4"
version = "0.1.1"
edition = "2024"
description = "Local embedded high-performance object store."
repository = "https://github.com/XiangpengHao/t4"

[workspace]
members = [".", "fuzz", "verified"]

[features]
default = []
shuttle = ["dep:shuttle"]

[dependencies]
libc = "0.2"
io-uring = "0.7"
shuttle = { version = "0.8", optional = true }
verified = { package = "t4-verified", version = "0.1.1", path = "verified" }

[dev-dependencies]
pollster = "0.4"
tempfile = "3"
